--- a/src/components/Search/styles.scss
+++ b/src/components/Search/styles.scss
@@ -16,12 +16,15 @@ section {
 
 input,
 select {
+  width: 100%;
   height: 47px;
   padding: 8px;
+  background-color: white;
+  font-weight: 700;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 500;
   text-align: center;
   margin: 5px;
@@ -40,6 +43,7 @@ h2 {
 }
 
 .input-group {
+  height: 51px;
   font-weight: 400;
   color: #8d8d8d;
   border: 2px solid #8d8d8d;
@@ -61,10 +65,6 @@ h2 {
     justify-content: space-between;
     align-items: center;
     padding-right: 0;
-
-    select {
-      width: 100%;
-    }
   }
 
   &:focus-within {
@@ -82,11 +82,6 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  select {
-    width: 100%;
-    font-weight: 700;
-  }
 
   &:focus-within {
     border-color: black;
@@ -115,6 +110,7 @@ span {
   font-weight: 700;
   line-height: 51px;
   color: $red;
+  text-align: center;
   &:hover {
     cursor: pointer;
   }
@@ -165,3 +161,61 @@ span {
   }
 }
 
+@media only screen and (max-width: 768px) {
+  section {
+    height: auto;
+    max-height: fit-content;
+  }
+
+  h2,
+  select,
+  .select-group {
+    grid-column: auto / span 2;
+  }
+
+  .input-group {
+    grid-column: auto / span 4;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  span,
+  .select-group,
+  .search-options {
+    grid-column: auto / span 4;
+  }
+
+  .vehicle-year,
+  .vehicle-price {
+    grid-column: auto / span 2;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .input-group {
+    input,
+    .select-group {
+      width: 40%;
+    }
+  }
+
+  .new-used {
+    grid-column: auto / span 4;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  section {
+    padding: 10px;
+  }
+
+  .input-group {
+    input {
+      width: 30%;
+    }
+    .select-group {
+      width: 45%;
+    }
+  }
+}
