--- a/src/global.scss
+++ b/src/global.scss
@@ -19,6 +19,7 @@ body {
   font: 400 14px Poppins, sans-serif;
   -webkit-font-smoothing: antialiased;
   background: #f3f5f8;
+  user-select: none;
 }
 
 button {
